# mediapipe-inferencer

./: .gitignore  .gitmodules  LICENSE  README.md  README_jp.md  ThirdPartyNotices.txt  build_mmap_inferencer.ps1  build_webcam_inferencer.ps1  download_models.ps1  pyproject.toml  settings.json
scripts/: generate_proto.ps1
src/: app_arg_parser.py  check_shape.py  filtering_results.py  inference_by_mmap.py  inference_by_webcam.py  mmap_arg_parser.py  record_raw_input.py  result_video_writer.py  settings.py  webcam_arg_parser.py
src/mediapipe_inferencer_core/: iamge_provider.py  image_provider.py  image_writer.py  packer.py  result_data.py  throttle.py  visualizer.py  visualizer_3d.py
src/mediapipe_inferencer_core/data_class/: __init__.py  landmark.py  landmark_list.py  result_data.py
src/mediapipe_inferencer_core/detector/: __init__.py  detector_handler.py  holistic_detector.py  landmark_detector.py
src/mediapipe_inferencer_core/filter/: __init__.py  exponential_smoothing.py  gaussian_1d.py  gaussian_1d_offline.py  landmark_filter.py  moving_average_filter.py  one_euro_filter.py
src/mediapipe_inferencer_core/network/: __init__.py  estimation_control_server.py  estimation_control_servicer.py  estimation_state.py  holistic_pose_sender.py  udp_client.py
src/mediapipe_inferencer_core/packer/: pack_to_landmark.py  packer_for_sending.py
src/mediapipe_inferencer_core/util/: __init__.py  float_util.py
src/offline_tools/: filtering_results.py
src/proto_generated/: face_results_pb2.py  hand_landmarks_pb2.py  holistic_landmarks_pb2.py  inferencer_control.proto  inferencer_control_pb2.py  inferencer_control_pb2_grpc.py  kinect_pose_landmarks_pb2.py  landmark_log_pb2.py  landmark_pb2.py  mediapipe_pose_landmarks_pb2.py  pose_landmarks_pb2.py
src/proto_generated/human_landmarks/: face_results_pb2.py  hand_landmarks_pb2.py
tests/: filter_test.py  test_landmark.py  test_util.py
