[project]
name = "mediapipe-inferencer-core"
version = "0.1.0"
description = ""
authors = [
    {name = "EC-K",email = "elxone.19jt@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "line-profiler (>=4.2.0,<5.0.0)",
    "mediapipe (==0.10.14)",
    "pytest (>=8.3.4,<9.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "nuitka (>=2.7.12,<3.0.0)"
]

[tool.poetry]
packages = [
    {include = "mediapipe_inferencer_core", from = "src/mediapipe_inferencer_core"},
    {include = "proto", from = "src/proto"},
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]