[project]
name = "mediapipe-inferencer-core"
version = "0.1.0"
description = ""
authors = [
    {name = "EC-K",email = "elxone.19jt@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "line-profiler (>=4.2.0,<5.0.0)",
    "mediapipe (==0.10.14)",
    "pytest (>=8.3.4,<9.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "nuitka (>=2.7.12,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
]

[tool.poetry]
packages = [{include="src"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

[tool.poetry.group.dev.dependencies]
deptry = "^0.23.1"

[tool.depty]
ignore_unused = ["mediapipe_inferencer_core", "proto_generated"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]